// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchHistoricalProfilesButton should render correctly 1`] = `
<Button
  onClick={[Function]}
  style={
    Object {
      "float": "left",
    }
  }
  variant="primary"
>
  Compare
</Button>
`;

exports[`FetchHistoricalProfilesButton should render mount correctly 1`] = `
<FetchHistoricalProfilesButton>
  <Button
    onClick={[Function]}
    style={
      Object {
        "float": "left",
      }
    }
    variant="primary"
  >
    <button
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id={0}
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "float": "left",
        }
      }
      type="button"
    >
      Compare
    </button>
  </Button>
</FetchHistoricalProfilesButton>
`;
